Tue Dec  9 00:14:16 UTC 2008  Steven Stallion  <stallions@ociweb.com>

        * java/INSTALL:

          Updated INSTALL with instructions for building on Mac OS X.

Mon Dec  8 19:28:27 UTC 2008  Steven Stallion  <stallions@ociweb.com>

        * dds/InfoRepo/DCPSInfoRepo.mpc:

          Dropped static dependency on imr_client. (This should cause a
          temporary failure on 1.4a builds (Ciju is working on a patch).

        * java/ant/opendds-ant.iml:
        * java/jms/compat/opendds-jms-compat.iml:
        * java/jms/src/org/opendds/jms/management/DCPSInfoRepoService.java:
        * java/jms/src/org/opendds/jms/management/Destination.java:
        * java/jms/src/org/opendds/jms/management/HibernatePersistenceService.java:
        * java/jms/src/org/opendds/jms/management/ParticipantFactoryService.java:
        * java/jms/src/org/opendds/jms/management/argument/DynamicArguments.java:

          Updates to JMX components: better logging; general refactoring.

Sun Dec  7 22:35:41 UTC 2008  Adam Mitz  <mitza@ociweb.com>

        * dds/DCPS/Comparator_T.h:

          Added an #include needed for TAO 1.4a on some platforms.

        * dds/DCPS/FileSystemStorage.h:

          Fixed a typo in my commit from yesterday.

Sun Dec  7 05:47:46 UTC 2008  Steven Stallion  <stallions@ociweb.com>

        * java/ant/opendds-ant.iml:
        * java/jms/compat/opendds-jms-compat.iml:
        * java/jms/compat/src/META-INF/application.xml:
        * java/jms/compat/src/META-INF/service/opendds-ds.xml:
        * java/jms/src/org/opendds/jms/management/HibernatePersistenceService.java:
        * java/jms/src/org/opendds/jms/persistence/HibernatePersistenceManager.java:
        * java/jms/src/org/opendds/jms/persistence/PersistenceManager.java:

          Refactored PersistenceManager; updated IDEA project files.

        * java/jms/src/org/opendds/jms/management/PersistenceManagerService.java:

          Removed this file.
